# rocket-app

./: Cargo.toml  Rocket.toml  database.sqlite
migrations/2023-08-02-164411_create_rustaceans/: up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs
